Fixed footer credits alignment

--- a/src/Assets/scss/_backgrounds.scss
+++ b/src/Assets/scss/_backgrounds.scss
@@ -5,13 +5,13 @@
   background: #191919;
 }
 
-.footer-style-2 {
+.footer, #skills {
   background: #101010;
 }
 
-#skills {
-  background:rgb(90, 184, 246);
-}
+// #skills {
+//   background:rgb(90, 184, 246);
+// }
 
 // #projects {
 //   background-image: url("../../projects.svg");
