--- a/src/Assets/scss/_footer.scss
+++ b/src/Assets/scss/_footer.scss
@@ -1,5 +1,5 @@
 /* Footer */
-.footer-style-2 {
+.footer {
   p {
       color: #c6c9d8;
       font-size: 14px;
